Updating html, css and javascript files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="card">
       <section id="intro">
-        <a href="#" onclick="">View Highscores</a>
+        <a href="#" onclick="showHighscore();">View Highscores</a><br>
         <h2>Coding Quiz Challenge</h2>
         <p>Try to answer the following code-related quiestions within the time
           limit. Keep in mind that incorrect answers will penalize your score/time 
